Add UFUNCS subsection

--- a/Pandas_Datacamp_exercises.ipynb
+++ b/Pandas_Datacamp_exercises.ipynb
@@ -324,7 +324,10 @@
         "colab_type": "text"
       },
       "source": [
-        "# Extracting and Transforming Data"
+        "# Extracting Data\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -1514,9 +1517,47 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Lna230tJLh7h",
+        "colab_type": "text"
+      },
+      "source": [
+        "**UFUNCS**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Zn_l1wOMIOSL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "9a9ee956-9d0c-40b1-bca3-6e446ea94f23"
+      },
+      "source": [
+        "from scipy.stats import zscore\n",
+        "\n",
+        "print(zscore(df['_source/date'])) #zscore calculates standard deviation from the mean in fractions of the standard deviation"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[-0.75414564 -0.75414564 -0.75414564 ...  2.29821286  2.29821286\n",
+            "  2.29821286]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QDUemYbFMKOg",
         "colab_type": "code",
         "colab": {}
       },
